# 0414chunengche

./: CMakeLists.txt  app_merged_sources.txt  config_bmp_merged_sources.txt  config_merged_sources.txt  driver_merged_sources.txt  merge_sources.py  run_all_merge_sources.py  services_merged_sources.txt  toolchain-rk3568.cmake  utils_merged_sources.txt
UNUSED/: driver_manager1.cpp  driver_manager1.h  main.cpp
UNUSED/board/: board.h
UNUSED/test/: can_send.cpp
app/: app_context.h  app_manager.cpp  app_manager.h  event.h  main.cpp
app/scheduler/: device_scheduler.cpp  device_scheduler.h  scheduler_timer.cpp  scheduler_timer.h
app/state_machine/: state_base.h  state_error.cpp  state_error.h  state_idle.cpp  state_idle.h  state_run.cpp  state_run.h
config/: fault_hmi_layout.jsonl  fault_map.jsonl  merge_sources.py  normal_map_logic.jsonl  system.json
config/protocol/: bms_j1939.json
config_bmp/: display_map.jsonl  io_map.json  normal_map_logic0408.jsonl  normal_map_logic_bef_time.jsonl  test.jsonl
config_bmp/protocol/: msg.xlsx
driver/: driver_manager.cpp  driver_manager.h  merge_sources.py
driver/adc/: ai.cpp  ai.h
driver/can/: can_driver.cpp  can_driver.h  can_thread.cpp  can_thread.h
driver/common/: serial_config.h
driver/gpio/: GPIODriver.cpp  GPIODriver.h  do.cpp
driver/net/: eth_driver.cpp  eth_driver.h  eth_thread.cpp  eth_thread.h
driver/serial/: rs232_driver.cpp  rs232_driver.h  rs485_driver.cpp  rs485_driver.h  serial_driver_base.cpp  serial_driver_base.h  serial_event.h  serial_thread.cpp  serial_thread.h
driver/test/: module_test.cpp  module_test.h
driver/timer/: timer_thread.cpp  timer_thread.h
services/aggregator/: data_aggregator.cpp  data_aggregator.h  snapshot_device_types.h  system_snapshot.h
services/aggregator/bms/: bms_snapshot.cpp  bms_snapshot.h
services/control/: command_dispatcher.cpp  command_dispatcher.h  control_commands.h  control_events.h  control_loop.cpp  control_loop.h
services/control/bms/: bms_command_manager.cpp  bms_command_manager.h  bms_fault_evaluator.cpp  bms_fault_evaluator.h  bms_fault_mapper.cpp  bms_fault_mapper.h  bms_logic_adapter.cpp  bms_logic_adapter.h  bms_logic_adapter_oneFactor.h  bms_logic_types.h
services/control/fault/: fault_addr_layout.h  fault_catalog.cpp  fault_catalog.h  fault_center.cpp  fault_center.h  fault_condition_engine.cpp  fault_condition_engine.h  fault_condition_state.cpp  fault_condition_state.h  fault_ids.h  fault_logic_evaluator.cpp  fault_logic_evaluator.h  fault_page_manager.cpp  fault_page_manager.h  fault_runtime_mapper.cpp  fault_runtime_mapper.h
services/control/logic/: logic_context.h  logic_device_data.cpp  logic_engine.cpp  logic_engine.h  logic_fault_refresh.cpp  logic_helpers.cpp  logic_helpers.h  logic_hmi_input.cpp  logic_hmi_output.cpp  logic_io.cpp  logic_link.cpp  logic_snapshot.cpp  logic_tick.cpp  logic_view_builder.cpp
services/device/: device_base.h  device_types.h
services/display/: display_data_map.cpp  display_data_map.h
services/mqtt/: mqtt_client.cpp  mqtt_client.h
services/normal/: normal_addr_layout.h  normal_hmi_writer.cpp  normal_hmi_writer.h
services/output/: display_rs485_session.cpp  display_rs485_session.h  uplink_eth.cpp  uplink_eth.h
services/parser/: crc_policy.cpp  crc_policy.h  frame_assembler.cpp  frame_assembler.h  modbus_rtu_req_assembler.cpp  modbus_rtu_req_assembler.h  parser_message.h  protocol_parser_thread.cpp  protocol_parser_thread.h  protocol_router.cpp  protocol_router.h  request_context.h
services/parser/232ups_ascii/: ascii_frame_assembler.cpp  ascii_frame_assembler.h
services/protocol/: protocol_base.h  protocol_factory.cpp  protocol_factory.h
services/protocol/can/: can_dispatcher.cpp  can_dispatcher.h  can_protocol_base.h  proto_bms.cpp  proto_bms.h  proto_custom.cpp  proto_custom.h
services/protocol/can/bms/: bit_extract.h  bms_command_types.h  bms_name_map.cpp  bms_name_map.h  bms_proto.cpp  bms_proto.h  bms_tx.cpp  bms_tx.h  proto_bms_table_runtime.cpp  proto_bms_table_runtime.h
services/protocol/can/bms/bms_thread/: bms_frame_router.cpp  bms_frame_router.h  bms_queue.cpp  bms_queue.h  bms_worker.cpp  bms_worker.h
services/protocol/can/pcu/: proto_pcu.cpp  proto_pcu.h
services/protocol/j1939/: j1939_manager.cpp  j1939_manager.h  j1939_stack.cpp  j1939_stack.h  j1939_types.h  opensae_adapter.c  opensae_adapter.h  opensae_port.cpp  opensae_port.h
services/protocol/modbus/: modbus_crc.cpp  modbus_crc.h  modbus_rtu.cpp  modbus_rtu.h
services/protocol/rs232/: ups_232_ascii_proto.cpp  ups_232_ascii_proto.h
services/protocol/rs485/: air_conditioner_proto.cpp  air_conditioner_proto.h  gas_detector_proto.cpp  gas_detector_proto.h  modbusProtocol.h  rs485_session.cpp  rs485_session.h  smoke_sensor_proto.cpp  smoke_sensor_proto.h
services/protocol/rs485/hmi/: hmi_address_table.cpp  hmi_address_table.h  hmi_proto.cpp  hmi_proto.h
services/snapshot/: display_sink.cpp  display_sink.h  file_sink.cpp  file_sink.h  snapshot_dispatcher.cpp  snapshot_dispatcher.h  snapshot_sink.h  uplink_sink.cpp  uplink_sink.h
services/snapshot/bms_filesink/: bms_file_sink.cpp  bms_file_sink.h  bms_snapshot_sink.h
services/snapshot/display/: hmi_display_map.cpp  hmi_display_map.h  hmi_snapshot_mapper.cpp  hmi_snapshot_mapper.h
services/snapshot/sqlite/sqlite_bms_sink/: sqlite_bms_flat_sink.cpp  sqlite_bms_flat_sink.h  sqlite_bms_sink.cpp  sqlite_bms_sink.h
services/snapshot/sqlite/sqlite_fault_sink/: sqlite_fault_sink.cpp  sqlite_fault_sink.h
services/snapshot/sqlite/sqlite_snapshot_sink/: sqlite_snapshot_flat_sink.cpp  sqlite_snapshot_flat_sink.h  sqlite_snapshot_sink.cpp  sqlite_snapshot_sink.h
utils/config/: config_loader.cpp  config_loader.h
utils/logger/: hex_dump.h  logger.cpp  logger.h
utils/queue/: msg_queue.cpp  msg_queue.h
utils/thread/: thread_base.cpp  thread_base.h
utils/time/: getTime.h
utils/timer/: timer_thread.cpp  timer_thread.h
utils/tools/bms_proto_trans/: excel_to_json.py  json_to_cpp.py  validate_proto.py
